--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "react-scripts": "5.0.1",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.4.1",
     "reselect": "^4.1.6",
     "sass": "^1.52.1",
     "styled-components": "^5.3.5",
